adjusted trendingTitless to prevent names from overlapping with each other

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -384,12 +384,12 @@ img {
 }
 
 .trendingTitle {
-	display: inline-block;
+	display: flex;
+	flex-wrap: wrap;
 	background-color: var(--midnightblack);
 	color: var(--purewhite);
-	font-size: 2rem;
+	font-size: 30px;
 	font-weight: 900;
-	justify-content: center;
 	align-self: center;
 	margin-top: 12px;
 }
@@ -501,6 +501,7 @@ img {
 
 .gameImg {
 	height: 300px;
+	text-align: centre;
 }
 
 .gameImg img {
